--- a/Speech_Emotion_Recognition.ipynb
+++ b/Speech_Emotion_Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3Ra3B+N8IkMmCS5WVCYak",
+      "authorship_tag": "ABX9TyMbh1UeuVL6fe+o7gQHYMG6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,16 +28,49 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "#SPEECH EMOTION RECOGNITION\n",
+        "**TABLE OF CONTENTS**\n",
+        "\n",
+        "1.INTRODUCTION\n",
+        "\n",
+        "2.EXPLORATORY DATA ANALYSIS (EDA)\n",
+        "\n",
+        "3.DATA AUGMENTATION\n",
+        "\n",
+        "4.FEATURE EXTRACTION\n",
+        "\n",
+        "5.MODEL"
+      ],
       "metadata": {
         "id": "aaggoNJvfL0a"
       }
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "#INTRODUCTION"
+      ],
       "metadata": {
         "id": "KPTWTUklfL_N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**PROBLEM STATEMENT**"
+      ],
+      "metadata": {
+        "id": "gqiZdG3poLvZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The purpose is to recognize the emotion and affective state of the speaker from his/her speech signal."
+      ],
+      "metadata": {
+        "id": "zK4J698goP7r"
       }
     },
     {
