--- a/Speech_Emotion_Recognition.ipynb
+++ b/Speech_Emotion_Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbh1UeuVL6fe+o7gQHYMG6",
+      "authorship_tag": "ABX9TyMsBtMEuXD7fGUKWvKek1Fi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,9 +75,36 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "**DATA SOURCE USED**"
+      ],
       "metadata": {
         "id": "5D_-I_fDfMcx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We have used the RAVDESS dataset in this project.It is one of the more common dataset used for this excercise by others. It's well liked because of its quality of speakers, recording and it has 24 actors of different genders. Here's the filename identifiers as per the official RAVDESS website:\n",
+        "\n",
+        "1.Modality (01 = full-AV, 02 = video-only, 03 = audio-only).\n",
+        "\n",
+        "2.Vocal channel (01 = speech, 02 = song).\n",
+        "\n",
+        "3.Emotion (01 = neutral, 02 = calm, 03 = happy, 04 = sad, 05 = angry, 06 = fearful, 07 = disgust, 08 = surprised).\n",
+        "\n",
+        "4.Emotional intensity (01 = normal, 02 = strong). NOTE: There is no strong intensity for the 'neutral' emotion.\n",
+        "\n",
+        "5.Statement (01 = \"Kids are talking by the door\", 02 = \"Dogs are sitting by the door\").\n",
+        "\n",
+        "6.Repetition (01 = 1st repetition, 02 = 2nd repetition).\n",
+        "\n",
+        "7.Actor (01 to 24. Odd numbered actors are male, even numbered actors are female).\n",
+        "\n",
+        "Here's an example of an audio filename. 02-01-06-01-02-01-12.mp4"
+      ],
+      "metadata": {
+        "id": "gu_g6oDhqHy6"
       }
     },
     {
