--- a/Speech_Emotion_Recognition.ipynb
+++ b/Speech_Emotion_Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsBtMEuXD7fGUKWvKek1Fi",
+      "authorship_tag": "ABX9TyPL4iH5Vx+QGNVz6VwSDwnA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,6 +105,30 @@
       ],
       "metadata": {
         "id": "gu_g6oDhqHy6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#EXPLORATORY DATA ANALYSIS"
+      ],
+      "metadata": {
+        "id": "aQOLi2qwr1C7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The key features of the audio data are namely, MFCC (Mel Frequency Cepstral Coefficients) and Mel Spectrogram\n",
+        "\n",
+        "1.MFCC (Mel Frequency Cepstral Coefficients)- MFCC is important feature extraction when using speech data,Mel scale is a scale that relates the perceived frequency of a tone to the real measured frequency. It scales the frequency so that you can fit greater carefully what the human ear can hear.\n",
+        "\n",
+        "2.Mel Spectrogram- A Fast Fourier Transform is computed on overlapping windowed segments of the signal, and what is the spectrogram , Spectrogram is visual way of representation of signal strength and also use for display the frequency sound waves.\n",
+        "\n",
+        "For th9e EDA we have used MFCC and Mel Spectogram"
+      ],
+      "metadata": {
+        "id": "Ibihec3nr2Qt"
       }
     },
     {
