--- a/Speech_Emotion_Recognition.ipynb
+++ b/Speech_Emotion_Recognition.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxjsIWWIoZv5cZwuZUNed4",
+      "authorship_tag": "ABX9TyPlrczjOjnuzSn1veiF9Dqm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "E9QIp-PafNHq"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -150,15 +150,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r4v75SR71RsK",
-        "outputId": "6ab30797-cb4a-48d9-936b-81d9352e1154"
+        "outputId": "8b5b86f5-a8e5-42fd-ae65-edc0ffbc4a4e"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Ravdess = '/content/drive/MyDrive/Ravdess/'\n"
+      ],
+      "metadata": {
+        "id": "xZjxbDDfGQLG"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ravdess_directory_list = os.listdir(Ravdess)\n",
+        "\n",
+        "emotion_df = []\n",
+        "\n",
+        "for dir in ravdess_directory_list:\n",
+        "    actor = os.listdir(os.path.join(Ravdess, dir))\n",
+        "    for wav in actor:\n",
+        "        info = wav.partition(\".wav\")[0].split(\"-\")\n",
+        "        emotion = int(info[2])\n",
+        "        emotion_df.append((emotion, os.path.join(Ravdess, dir, wav)))\n",
+        "\n",
+        "Ravdess_df = pd.DataFrame.from_dict(emotion_df)\n",
+        "Ravdess_df.rename(columns={1 : \"Path\", 0 : \"Emotion\"}, inplace=True)\n",
+        "\n",
+        "Ravdess_df.Emotion.replace({1:'neutral', 2:'neutral', 3:'happy', 4:'sad', 5:'angry', 6:'fear', 7:'disgust', 8:'surprise'}, inplace=True)\n",
+        "Ravdess_df.head()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 246
+        },
+        "id": "z7YHNMHwFcDz",
+        "outputId": "33a46658-833a-406f-a2ab-ed247debc464"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-0ac339598225>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mwav\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mactor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0minfo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwav\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".wav\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"-\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0memotion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0memotion_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memotion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRavdess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwav\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
           ]
         }
       ]
@@ -172,6 +226,17 @@
       ],
       "metadata": {
         "id": "H74G0Lkr7VsG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "https://drive.google.com/drive/folders/1Nod70b0svNs9ho6fK83KXpaTM4QjPbI3?usp=sharing"
+      ],
+      "metadata": {
+        "id": "jiosEZkiCvQm"
       },
       "execution_count": null,
       "outputs": []
