--- a/Speech_Emotion_Recognition.ipynb
+++ b/Speech_Emotion_Recognition.ipynb
@@ -3248,6 +3248,61 @@
           "execution_count": 48
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "cm = confusion_matrix(y_true=y_check, y_pred=y_pred)"
+      ],
+      "metadata": {
+        "id": "h0wVVY_MOSen"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_confusion_matrix(cm, classes,\n",
+        "                        normalize=False,\n",
+        "                        title='Confusion matrix',\n",
+        "                        cmap=plt.cm.Blues):\n",
+        "    \"\"\"\n",
+        "    This function prints and plots the confusion matrix.\n",
+        "    Normalization can be applied by setting `normalize=True`.\n",
+        "    \"\"\"\n",
+        "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+        "    plt.title(title)\n",
+        "    plt.colorbar()\n",
+        "    tick_marks = np.arange(len(classes))\n",
+        "    plt.xticks(tick_marks, classes, rotation=45)\n",
+        "    plt.yticks(tick_marks, classes)\n",
+        "\n",
+        "    if normalize:\n",
+        "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+        "        print(\"Normalized confusion matrix\")\n",
+        "    else:\n",
+        "        print('Confusion matrix, without normalization')\n",
+        "\n",
+        "    print(cm)\n",
+        "\n",
+        "    thresh = cm.max() / 2.\n",
+        "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+        "        plt.text(j, i, cm[i, j],\n",
+        "            horizontalalignment=\"center\",\n",
+        "            color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+        "\n",
+        "    plt.tight_layout()\n",
+        "    plt.ylabel('True label')\n",
+        "    plt.xlabel('Predicted label')"
+      ],
+      "metadata": {
+        "id": "GUOj_0WeOnr3"
+      },
+      "execution_count": 50,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -3256,7 +3311,7 @@
       "collapsed_sections": [],
       "provenance": [],
       "mount_file_id": "18cY2zQb_Pl9kSL0WPvWVp1-lk5j04lEY",
-      "authorship_tag": "ABX9TyOQAXOl++r/WyNg5eF9QL4t",
+      "authorship_tag": "ABX9TyNgj2gsk9U5Okxpv5Guvb8I",
       "include_colab_link": true
     },
     "kernelspec": {
